# regFixLongPaths

./: CMakeLists.txt  adminAccess.manifest  main.cpp  resources.rc
